Finish up Crook Recipes, add Crucible Heat Source recipes.